--- a/Palendrome/index.html
+++ b/Palendrome/index.html
@@ -122,9 +122,10 @@ HTML <!DOCTYPE html>
     <!-- <script src="roman_numerals.js"></script> -->
 
     <!-- <script src="cash_register.js"></script> -->
-    <script src="test_field.js"></script>
+    <!-- <script src="test_field.js"></script> -->
     <!-- <script src="codedump.js"></script> -->
     <!-- <script src="final_register.js"></script> -->
+    <script src="register_take2.js"></script>
 
 
   </body>
