made updates added button functionality

--- a/NewCashRegister/index.html
+++ b/NewCashRegister/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Palendrome Checker</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="newcashregister.css">
   </head>
   <body>
+    
+    <input id="text-input"/>
+    <button id="checkbtn"></button>
+    <div id="result"></div>
+
+
+
     <!-- https://palindrome-checker.freecodecamp.rocks/ -->
     <script src="newcashregister.js" async defer></script>
   </body>
