added new files

--- a/NewPalendrome/index.html
+++ b/NewPalendrome/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="newpalendrome.css">
   </head>
   <body>
-    <input id="text-input" placeHolder="Enter your text" onchange="getText" value=""/>
+    <input id="text-input" placeHolder="Enter your text" change="getText" value=""/>
     <button id="check-btn" onclick="checkInput"> Check</button>
-    <div id="result"></div>
+    <div id="result" change="addText"></div>
 
 
     <!-- https://palindrome-checker.freecodecamp.rocks/ -->
